Start working on dropdown component; add first tests

--- a/lib/ember-components/templates/components/dropdown-menu.hbs
+++ b/lib/ember-components/templates/components/dropdown-menu.hbs
@@ -1,1 +1,9 @@
-dropdown-menu
+<div class="dropdown-selector">
+    <span class="title">
+        {{dropdownTitle}}
+    </span>
+</div>
+
+<ul {{bind-attr class=":dropdown-menu showMenu::hide"}}>
+
+</ul>
