--- a/lib/ember-components/templates/components/dropdown-menu.hbs
+++ b/lib/ember-components/templates/components/dropdown-menu.hbs
@@ -1,9 +1,15 @@
-<div class="dropdown-selector">
+<div class="dropdown-selector" {{action "toggleShowMenu"}}>
     <span class="title">
         {{dropdownTitle}}
     </span>
 </div>
 
 <ul {{bind-attr class=":dropdown-menu showMenu::hide"}}>
-
+    {{#if menuItems}}
+        {{#each menuItem in menuItems}}
+            {{dropdown-menu-item item=listItem}}
+        {{/each}}
+    {{else}}
+        {{yield}}
+    {{/if}}
 </ul>
